# flippen

./: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json
app/: app.css  root.tsx
app/base/: Button.tsx  IconButton.tsx
app/base/MenuBar/: MenuBarRoot.tsx
app/welcome/: welcome.tsx
frontend/: biome.json  package-lock.json  package.json  vite.config.ts
frontend/app/: app.css  root.tsx
frontend/app/base/: Button.tsx  Card.tsx  Dialog.tsx  IconButton.tsx  NumberField.tsx  Slider.tsx  TextField.tsx  Tooltip.tsx
frontend/app/base/MenuBar/: MenuBarItem.tsx  MenuBarMenu.tsx  (+1 more)
frontend/app/editor/: Clip.tsx  ClipInspector.tsx  ColorInspector.tsx  DrawCanvas.tsx  Inspector.tsx  Timeline.tsx  ToolInspector.tsx  Toolbar.tsx  index.tsx  useFrameList.tsx  useTimeline.tsx
frontend/app/layout/: GlobalNavigation.tsx
frontend/app/routes/: home.tsx
frontend/app/util/: clip.ts  color.ts  transform.ts
frontend/app/wasm/: wasm-loader.ts
frontend/app/welcome/: ColorPicker.tsx  DrawCanvas.tsx  Inspector.tsx  Timeline.tsx  Toolbar.tsx  useFrameList.tsx  welcome.tsx
wasm/: Cargo.toml
wasm/src/: action.rs  app.rs  core.rs  lib.rs  tool.rs
wasm/src/action/: add_clip_action.rs  begin_tool_action.rs  delete_clip_action.rs  insert_frame_action.rs
wasm/src/app/: action.rs  action_manager.rs  app.rs  clip.rs  composition.rs  context.rs  frame_list.rs  project.rs  project_settings.rs  timeline.rs
wasm/src/core/: color.rs  image.rs  pixel.rs  tool.rs  transform.rs
wasm/src/tool/: circle_brush_tool.rs  eraser_tool.rs  fill_tool.rs  image_brush_tool.rs
(+31 files in other folders)
