[package]
name = "flippen_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = "1.23.0"
console_error_panic_hook = "0.1.7"
gloo = "0.11.0"
js-sys = "0.3.77"
serde = "1.0.219"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }
wgpu = "25.0.2"
