[package]
name = "flippen_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = "1.23.0"
cgmath = "0.18.0"
console_error_panic_hook = "0.1.7"
gloo = "0.11.0"
js-sys = "0.3.77"
rmp-serde = "1.3.0"
serde = "1.0.219"
serde_bytes = "0.11.17"
uuid = { version = "1.17.0", features = ["v4", "js", "serde"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }
wgpu = "25.0.2"
